// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/WalletPage/actions/closeDepositModal should loadTransactionsSuccess should create closeDepositModal action 1`] = `
Object {
  "type": "dicoapp/WalletPage/DEPOSIT_MODAL_CLOSE",
}
`;

exports[`containers/WalletPage/actions/closeWithdrawModal should loadTransactionsSuccess should create closeWithdrawModal action 1`] = `
Object {
  "type": "dicoapp/WalletPage/WITHDRAW_MODAL_CLOSE",
}
`;

exports[`containers/WalletPage/actions/loadTransactions should loadTransactions should create loadTransactions action 1`] = `
Object {
  "type": "dicoapp/WalletPage/LOAD_TRANSACTIONS",
}
`;

exports[`containers/WalletPage/actions/loadTransactionsSuccess should loadTransactionsSuccess should create loadTransactionsSuccess action 1`] = `
Object {
  "type": "dicoapp/WalletPage/LOAD_TRANSACTIONS_SUCCESS",
}
`;

exports[`containers/WalletPage/actions/openDepositModal should loadTransactionsSuccess should create openDepositModal action 1`] = `
Object {
  "payload": Object {
    "coin": "KMD",
  },
  "type": "dicoapp/WalletPage/DEPOSIT_MODAL_OPEN",
}
`;

exports[`containers/WalletPage/actions/openWithdrawModal should loadTransactionsSuccess should create openWithdrawModal action 1`] = `
Object {
  "payload": Object {
    "coin": "KMD",
  },
  "type": "dicoapp/WalletPage/WITHDRAW_MODAL_OPEN",
}
`;
